--- a/build.gradle
+++ b/build.gradle
@@ -99,7 +99,7 @@ allprojects {
     //   * any new checkers have been added,
     //   * the patch level is 9 (keep the patch level as a single digit), or
     //   * backward-incompatible changes have been made to APIs or elsewhere.
-    version '3.2.0'
+    version '3.2.1'
 
     repositories {
         mavenCentral()
@@ -970,18 +970,38 @@ task releaseAndTest {
 // Don't create an empty checker-framework-VERSION.jar
 jar.onlyIf {false}
 
-void mvnDeployToLocalRepo(String binary, String pom) {
+/**
+ * Deploys the given jar file to the local Maven repository.
+ * @param jar fully qualified file name of a jar file
+ * @param pom pom file describing the artifact
+ */
+void mvnDeployToLocalRepo(String jar, String pom) {
     exec {
         executable 'mvn'
         args += [
                 'install:install-file',
-                "-Dfile=${binary}",
+                "-Dfile=${jar}",
                 "-DpomFile=${pom}",
+                // TODO: This changes the version number of the artifact, but not the version number in the pom file.
+//                "-Dversion=${version}",
+                '-DgeneratePom=true'
+
         ]
     }
 }
 
-void mvnSignAndDeployToSonatype(String binary, String pom, String classifier="") {
+void mvnDeployToLocalRepo(Project project, String pomFile) {
+    String jarFile = project.tasks.getByName('jar').archiveFile.get().toString();
+    mvnDeployToLocalRepo(jarFile, pomFile)
+}
+
+/**
+ * Signs and deploys the given jar file to the Sonatypes Maven repository.
+ * @param jar fully qualified file name of a jar file
+ * @param pom pom file describing the artifact
+ * @param classifier the kind of artifact; sources or javadoc; defaults to the empty string
+ */
+void mvnSignAndDeployToSonatype(String jar, String pom, String classifier="") {
     String passwordFile = "/projects/swlab1/checker-framework/hosting-info/release-private.password"
     String passphrase = new File(passwordFile).readLines().get(0);
 
@@ -992,7 +1012,7 @@ void mvnSignAndDeployToSonatype(String binary, String pom, String classifier="")
                 '-Durl=https://oss.sonatype.org/service/local/staging/deploy/maven2/',
                 '-DrepositoryId=sonatype-nexus-staging',
                 "-DpomFile=${pom}",
-                "-Dfile=${binary}",
+                "-Dfile=${jar}",
                 '-Dgpg.keyname=checker-framework-dev@googlegroups.com',
                 "-Dgpg.passphrase=${passphrase}"
         ]
@@ -1001,8 +1021,17 @@ void mvnSignAndDeployToSonatype(String binary, String pom, String classifier="")
         }
     }
 }
+
+/**
+ * Signs and deploys multiple jar files for a single artifact.
+ * @param classesJar class jar file
+ * @param sourceJar source jar file corresponding to the classesJar
+ * @param javadocJar javadoc jar file corresponding to the classesJar
+ * @param pom pom file describing the artifact
+ */
 void mvnSignAndDeployMultipleToSonatype(String classesJar, String sourceJar, String javadocJar, String pom) {
     mvnSignAndDeployToSonatype(classesJar, pom)
     mvnSignAndDeployToSonatype(sourceJar, pom, "sources")
     mvnSignAndDeployToSonatype(javadocJar, pom,"javadoc")
 }
+
