--- a/checker-qual/build.gradle
+++ b/checker-qual/build.gradle
@@ -52,18 +52,16 @@ clean {
 }
 
 task deployArtifactsToLocalRepo(dependsOn: jar) {
-    description 'Deploys '
+    description "Deploys ${jar.archiveFileName.get()} to the local Maven repository. "
     doLast {
         mvnDeployToLocalRepo(project, "${rootDir}/maven-artifacts/release/checkerQualReleasePom.xml".toString())
     }
 }
 
 task deployArtifactsToSonatype {
-    description 'Deploys '
-    dependsOn 'jar'
-    dependsOn 'sourcesJar'
-    dependsOn 'javadocJar'
+    description "Deploys ${jar.archiveFileName.get()} to the Sonatype repository"
+    dependsOn ('jar', 'sourcesJar', 'javadocJar')
     doLast {
-        mvnSignAndDeployMultipleToSonatype(jar.archiveFile.get().toString(), sourcesJar.archiveFile.get().toString(), javadocJar.archiveFile.get().toString(), "${rootDir}/maven-artifacts/release/checkerQualReleasePom.xml")
+        mvnSignAndDeployMultipleToSonatype(project, "${rootDir}/maven-artifacts/release/checkerQualReleasePom.xml".toString())
     }
 }
