--- a/checker/build.gradle
+++ b/checker/build.gradle
@@ -381,14 +381,13 @@ task deployArtifactsToLocalRepo(dependsOn: shadowJar) {
     description 'Deploys '
     doLast {
         mvnDeployToLocalRepo("${projectDir}/dist/checker.jar", "${rootDir}/maven-artifacts/release/checkerReleasePom.xml")
+        // TODO: jdk8.jar
     }
 }
 
 task deployArtifactsToSonatype {
     description 'Deploys '
-    dependsOn shadowJar
-    dependsOn 'sourcesJar'
-    dependsOn 'javadocJar'
+    dependsOn (shadowJar, 'sourcesJar', 'javadocJar')
     doLast {
         mvnSignAndDeployMultipleToSonatype("${projectDir}/dist/checker.jar", sourcesJar.archiveFile.get().toString(), javadocJar.archiveFile.get().toString(), "${rootDir}/maven-artifacts/release/checkerReleasePom.xml")
     }
