--- a/framework-test/build.gradle
+++ b/framework-test/build.gradle
@@ -17,3 +17,18 @@ dependencies {
 }
 
 jar.archiveBaseName = 'framework-test'
+
+task deployArtifactsToLocalRepo(dependsOn: jar) {
+    description "Deploys ${jar.archiveFileName.get()} to the local Maven repository. "
+    doLast {
+        mvnDeployToLocalRepo(project, "${rootDir}/maven-artifacts/release/frameworktestReleasePom.xml".toString())
+    }
+}
+
+task deployArtifactsToSonatype {
+    description "Deploys ${jar.archiveFileName.get()} to the Sonatype repository"
+    dependsOn ('jar', 'sourcesJar', 'javadocJar')
+    doLast {
+        mvnSignAndDeployMultipleToSonatype(project, "${rootDir}/maven-artifacts/release/frameworktestReleasePom.xml".toString())
+    }
+}
