--- a/checker/build.gradle
+++ b/checker/build.gradle
@@ -401,7 +401,7 @@ task deployArtifactsToLocalRepo(dependsOn: shadowJar) {
 
 task deployArtifactsToSonatype {
     description 'Deploys '
-    dependsOn (shadowJar, 'sourcesJar', 'javadocJar', jdkSourcesJar, jdkJavadocJar, 'updateJdk')
+    dependsOn (shadowJar, 'allSourcesJar', 'allJavadocJar', jdkSourcesJar, jdkJavadocJar, 'updateJdk')
     doLast {
         mvnSignAndDeployMultipleToSonatype("${projectDir}/dist/checker.jar", allSourcesJar.archiveFile.get().toString(), allJavadocJar.archiveFile.get().toString(), "${rootDir}/maven-artifacts/release/checkerReleasePom.xml")
         mvnSignAndDeployMultipleToSonatype("${projectDir}/dist/jdk8.jar", jdkSourcesJar.archiveFile.get().toString(), jdkJavadocJar.archiveFile.get().toString(), "${rootDir}/maven-artifacts/release/checkerReleasePom.xml")
