Finish pom rename.

--- a/checker-qual-android/build.gradle
+++ b/checker-qual-android/build.gradle
@@ -41,7 +41,7 @@ clean {
 task deployArtifactsToLocalRepo(dependsOn: jar) {
     description "Deploys ${jar.archiveFileName.get()} to the local Maven repository. "
     doLast {
-        mvnDeployToLocalRepo(project, "${rootDir}/maven-artifacts/release/checkerQualAndroidReleasePom.xml".toString())
+        mvnDeployToLocalRepo(project, "${pomFiles}/checker-qual-android-pom.xml")
     }
 }
 
@@ -49,6 +49,6 @@ task deployArtifactsToSonatype {
     description "Deploys ${jar.archiveFileName.get()} to the Sonatype repository"
     dependsOn ('jar', 'sourcesJar', 'javadocJar')
     doLast {
-        mvnSignAndDeployMultipleToSonatype(project, "${rootDir}/maven-artifacts/release/checkerQualAndroidReleasePom.xml".toString())
+        mvnSignAndDeployMultipleToSonatype(project, "${pomFiles}/checker-qual-android-pom.xml")
     }
 }
