--- a/framework-test/build.gradle
+++ b/framework-test/build.gradle
@@ -21,7 +21,7 @@ jar.archiveBaseName = 'framework-test'
 task deployArtifactsToLocalRepo(dependsOn: jar) {
     description "Deploys ${jar.archiveFileName.get()} to the local Maven repository. "
     doLast {
-        mvnDeployToLocalRepo(project, "${rootDir}/maven-artifacts/release/frameworktestReleasePom.xml".toString())
+        mvnDeployToLocalRepo(project, "${pomFiles}/framework-test-pom.xml")
     }
 }
 
@@ -29,6 +29,6 @@ task deployArtifactsToSonatype {
     description "Deploys ${jar.archiveFileName.get()} to the Sonatype repository"
     dependsOn ('jar', 'sourcesJar', 'javadocJar')
     doLast {
-        mvnSignAndDeployMultipleToSonatype(project, "${rootDir}/maven-artifacts/release/frameworktestReleasePom.xml".toString())
+        mvnSignAndDeployMultipleToSonatype(project, "${pomFiles}/framework-test-pom.xml")
     }
 }
