--- a/javacutil/build.gradle
+++ b/javacutil/build.gradle
@@ -14,7 +14,7 @@ dependencies {
 task deployArtifactsToLocalRepo(dependsOn: jar) {
     description "Deploys ${jar.archiveFileName.get()} to the local Maven repository. "
     doLast {
-        mvnDeployToLocalRepo(project, "${rootDir}/maven-artifacts/release/javacutilReleasePom.xml".toString())
+        mvnDeployToLocalRepo(project, "${pomFiles}/javacutil-pom.xml")
     }
 }
 
@@ -22,6 +22,6 @@ task deployArtifactsToSonatype {
     description "Deploys ${jar.archiveFileName.get()} to the Sonatype repository"
     dependsOn ('jar', 'sourcesJar', 'javadocJar')
     doLast {
-        mvnSignAndDeployMultipleToSonatype(project, "${rootDir}/maven-artifacts/release/javacutilReleasePom.xml".toString())
+        mvnSignAndDeployMultipleToSonatype(project, "${pomFiles}/javacutil-pom.xml")
     }
 }
