--- a/checker/build.gradle
+++ b/checker/build.gradle
@@ -394,8 +394,8 @@ task deployArtifactsToLocalRepo(dependsOn: shadowJar) {
     description 'Deploys '
     dependsOn 'updateJdk'
     doLast {
-        mvnDeployToLocalRepo("${projectDir}/dist/checker.jar", "${rootDir}/maven-artifacts/release/checkerReleasePom.xml")
-        mvnDeployToLocalRepo("${projectDir}/dist/jdk8.jar", "${rootDir}/maven-artifacts/release/jdk8ReleasePom.xml")
+        mvnDeployToLocalRepo("${projectDir}/dist/checker.jar", "${pomFiles}/checker-pom.xml")
+        mvnDeployToLocalRepo("${projectDir}/dist/jdk8.jar", "${pomFiles}/jdk8-pom.xml")
     }
 }
 
@@ -403,7 +403,7 @@ task deployArtifactsToSonatype {
     description 'Deploys '
     dependsOn (shadowJar, 'allSourcesJar', 'allJavadocJar', jdkSourcesJar, jdkJavadocJar, 'updateJdk')
     doLast {
-        mvnSignAndDeployMultipleToSonatype("${projectDir}/dist/checker.jar", allSourcesJar.archiveFile.get().toString(), allJavadocJar.archiveFile.get().toString(), "${rootDir}/maven-artifacts/release/checkerReleasePom.xml")
-        mvnSignAndDeployMultipleToSonatype("${projectDir}/dist/jdk8.jar", jdkSourcesJar.archiveFile.get().toString(), jdkJavadocJar.archiveFile.get().toString(), "${rootDir}/maven-artifacts/release/jdk8ReleasePom.xml")
+        mvnSignAndDeployMultipleToSonatype("${projectDir}/dist/checker.jar", allSourcesJar.archiveFile.get().toString(), allJavadocJar.archiveFile.get().toString(), "${pomFiles}/checker-pom.xml")
+        mvnSignAndDeployMultipleToSonatype("${projectDir}/dist/jdk8.jar", jdkSourcesJar.archiveFile.get().toString(), jdkJavadocJar.archiveFile.get().toString(), "${pomFiles}/jdk8-pom.xml")
     }
 }
