--- a/dataflow/build.gradle
+++ b/dataflow/build.gradle
@@ -18,8 +18,8 @@ task deployArtifactsToLocalRepo(dependsOn: jar) {
     dependsOn ('jar', 'shadowJar')
 
     doLast {
-        mvnDeployToLocalRepo(project, "${rootDir}/maven-artifacts/release/dataflowReleasePom.xml".toString())
-        mvnDeployToLocalRepo(shadowJar.archiveFile.get().toString(), "${rootDir}/maven-artifacts/release/dataflowShadedReleasePom.xml".toString())
+        mvnDeployToLocalRepo(project, "${pomFiles}/dataflow-pom.xml")
+        mvnDeployToLocalRepo(shadowJar.archiveFile.get().toString(), "${pomFiles}/dataflow-shaded-pom.xml")
     }
 }
 
@@ -27,7 +27,7 @@ task deployArtifactsToSonatype {
     description "Deploys ${jar.archiveFileName.get()} to the Sonatype repository"
     dependsOn ('jar', 'sourcesJar', 'javadocJar', 'shadowJar')
     doLast {
-        mvnSignAndDeployMultipleToSonatype(project, "${rootDir}/maven-artifacts/release/dataflowReleasePom.xml".toString())
-        mvnSignAndDeployMultipleToSonatype(shadowJar.archiveFile.get().toString(), sourcesJar.archiveFile.get().toString(), javadocJar.archiveFile.get().toString(), "${rootDir}/maven-artifacts/release/dataflowShadedReleasePom.xml")
+        mvnSignAndDeployMultipleToSonatype(project, "${pomFiles}/dataflow-pom.xml")
+        mvnSignAndDeployMultipleToSonatype(shadowJar.archiveFile.get().toString(), sourcesJar.archiveFile.get().toString(), javadocJar.archiveFile.get().toString(), "${pomFiles}/dataflow-shaded-pom.xml")
     }
 }
