--- a/checker-qual/build.gradle
+++ b/checker-qual/build.gradle
@@ -52,7 +52,7 @@ clean {
 }
 
 task deployArtifactsToLocalRepo(dependsOn: jar) {
-    description "Deploys ${jar.archiveFileName.get()} to the local Maven repository. "
+    description "Deploys ${jar.archiveFileName.get()} to the local Maven repository"
     doLast {
         mvnDeployToLocalRepo(project, "${pomFiles}/checker-qual-pom.xml")
     }
