--- a/javacutil/build.gradle
+++ b/javacutil/build.gradle
@@ -12,7 +12,7 @@ dependencies {
 }
 
 task deployArtifactsToLocalRepo(dependsOn: jar) {
-    description "Deploys ${jar.archiveFileName.get()} to the local Maven repository. "
+    description "Deploys ${jar.archiveFileName.get()} to the local Maven repository"
     doLast {
         mvnDeployToLocalRepo(project, "${pomFiles}/javacutil-pom.xml")
     }
