--- a/framework-test/build.gradle
+++ b/framework-test/build.gradle
@@ -19,7 +19,7 @@ dependencies {
 jar.archiveBaseName = 'framework-test'
 
 task deployArtifactsToLocalRepo(dependsOn: jar) {
-    description "Deploys ${jar.archiveFileName.get()} to the local Maven repository. "
+    description "Deploys ${jar.archiveFileName.get()} to the local Maven repository"
     doLast {
         mvnDeployToLocalRepo(project, "${pomFiles}/framework-test-pom.xml")
     }
