--- a/checker/build.gradle
+++ b/checker/build.gradle
@@ -379,7 +379,7 @@ task jtregJdk11Tests(dependsOn: ':downloadJtreg', group: 'Verification') {
 task jdkSourcesJar(type: Jar) {
     // All Maven artifacts should have a sources/javadoc jar in order to be submitted to Maven central.
     // We create dummies with READMEs in them and pass those to Central. This is the recommended way of handling this.
-    // See: https://docs.sonatype.org/display/Repository/Sonatype+OSS+Maven+Repository+Usage+Guide -->
+    // See: https://central.sonatype.org/pages/requirements.html -->
     archiveFileName = 'jdk8-source.jar'
     from "${rootDir}/maven-artifacts/release/"
     include 'README-jdk'
@@ -389,7 +389,7 @@ task jdkSourcesJar(type: Jar) {
 task jdkJavadocJar(type: Jar) {
     // All Maven artifacts should have a sources/javadoc jar in order to be submitted to Maven central.
     // We create dummies with READMEs in them and pass those to Central. This is the recommended way of handling this.
-    // See: https://docs.sonatype.org/display/Repository/Sonatype+OSS+Maven+Repository+Usage+Guide -->
+    // See: https://central.sonatype.org/pages/requirements.html -->
     archiveFileName = 'jdk8-javadoc.jar'
     from "${rootDir}/maven-artifacts/release/"
     include 'README-jdk'
