--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -37,12 +37,12 @@ dependencies {
     testImplementation project(':framework-test')
     testImplementation sourceSets.testannotations.output
 
-    // AutoValue support in returns receiver checker
+    // AutoValue support in Returns Receiver Checker
     implementation "com.google.auto.value:auto-value-annotations:${versions.autoValue}"
     testImplementation "com.google.auto.value:auto-value-annotations:${versions.autoValue}"
     testImplementation "com.google.auto.value:auto-value:${versions.autoValue}"
 
-    // Lombok support in returns receiver checker
+    // Lombok support in Returns Receiver Checker
     testImplementation "org.projectlombok:lombok:${versions.lombok}"
 }
 
