--- a/checker-qual/build.gradle
+++ b/checker-qual/build.gradle
@@ -50,3 +50,18 @@ compileJava {
 clean {
     delete file('src/')
 }
+
+task deployArtifactsToLocalRepo(dependsOn: jar) {
+    description "Deploys ${jar.archiveFileName.get()} to the local Maven repository"
+    doLast {
+        mvnDeployToLocalRepo(project, "${pomFiles}/checker-qual-pom.xml")
+    }
+}
+
+task deployArtifactsToSonatype {
+    description "Deploys ${jar.archiveFileName.get()} to the Sonatype repository"
+    dependsOn ('jar', 'sourcesJar', 'javadocJar')
+    doLast {
+        mvnSignAndDeployMultipleToSonatype(project, "${pomFiles}/checker-qual-pom.xml")
+    }
+}
