--- a/checker/build.gradle
+++ b/checker/build.gradle
@@ -376,3 +376,40 @@ task jtregJdk11Tests(dependsOn: ':downloadJtreg', group: 'Verification') {
 
     }
 }
+task jdkSourcesJar(type: Jar) {
+    // All Maven artifacts should have a sources/javadoc jar in order to be submitted to Maven central.
+    // We create dummies with READMEs in them and pass those to Central. This is the recommended way of handling this.
+    // See: https://central.sonatype.org/pages/requirements.html -->
+    archiveFileName = 'jdk8-source.jar'
+    from "${rootDir}/maven-artifacts/release/"
+    include 'README-jdk'
+    destinationDirectory = buildDir
+}
+
+task jdkJavadocJar(type: Jar) {
+    // All Maven artifacts should have a sources/javadoc jar in order to be submitted to Maven central.
+    // We create dummies with READMEs in them and pass those to Central. This is the recommended way of handling this.
+    // See: https://central.sonatype.org/pages/requirements.html -->
+    archiveFileName = 'jdk8-javadoc.jar'
+    from "${rootDir}/maven-artifacts/release/"
+    include 'README-jdk'
+    destinationDirectory = buildDir
+}
+
+task deployArtifactsToLocalRepo(dependsOn: shadowJar) {
+    description 'Deploys checker.jar and jdk8.jar to the local Maven repository'
+    dependsOn 'updateJdk'
+    doLast {
+        mvnDeployToLocalRepo("${projectDir}/dist/checker.jar", "${pomFiles}/checker-pom.xml")
+        mvnDeployToLocalRepo("${projectDir}/dist/jdk8.jar", "${pomFiles}/jdk8-pom.xml")
+    }
+}
+
+task deployArtifactsToSonatype {
+    description 'Deploys checker.jar and jdk8.jar (and their sources/javadoc jars) to the Sonatype repository'
+    dependsOn (shadowJar, 'allSourcesJar', 'allJavadocJar', jdkSourcesJar, jdkJavadocJar, 'updateJdk')
+    doLast {
+        mvnSignAndDeployMultipleToSonatype("${projectDir}/dist/checker.jar", allSourcesJar.archiveFile.get().toString(), allJavadocJar.archiveFile.get().toString(), "${pomFiles}/checker-pom.xml")
+        mvnSignAndDeployMultipleToSonatype("${projectDir}/dist/jdk8.jar", jdkSourcesJar.archiveFile.get().toString(), jdkJavadocJar.archiveFile.get().toString(), "${pomFiles}/jdk8-pom.xml")
+    }
+}
