--- a/build.gradle
+++ b/build.gradle
@@ -102,7 +102,7 @@ allprojects {
     //   * any new checkers have been added,
     //   * the patch level is 9 (keep the patch level as a single digit), or
     //   * backward-incompatible changes have been made to APIs or elsewhere.
-    version '3.2.1'
+    version '3.3.0-SNAPSHOT'
 
     repositories {
         mavenCentral()
