Use 'ubuntu-latest' instead of 'ubuntu-16.04'

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ pr:
 jobs:
 - job: all_tests_jdk8
   pool:
-    vmImage: 'ubuntu-16.04'
+    vmImage: 'ubuntu-latest'
   container: mdernst/cf-ubuntu-jdk8:latest
   steps:
   - checkout: self
@@ -21,7 +21,7 @@ jobs:
     displayName: test-cftests-all.sh
 - job: all_tests_jdk11
   pool:
-    vmImage: 'ubuntu-16.04'
+    vmImage: 'ubuntu-latest'
   container: mdernst/cf-ubuntu-jdk11:latest
   steps:
   - checkout: self
@@ -30,7 +30,7 @@ jobs:
     displayName: test-cftests-all.sh
 - job: jdk_jar_jdk8
   pool:
-    vmImage: 'ubuntu-16.04'
+    vmImage: 'ubuntu-latest'
   container: mdernst/cf-ubuntu-jdk8:latest
   steps:
   - checkout: self
@@ -39,7 +39,7 @@ jobs:
     displayName: test-jdk-jar.sh
 - job: misc_jdk8
   pool:
-    vmImage: 'ubuntu-16.04'
+    vmImage: 'ubuntu-latest'
   container: mdernst/cf-ubuntu-jdk8-plus:latest
   steps:
   - checkout: self
@@ -48,7 +48,7 @@ jobs:
     displayName: test-misc.sh
 - job: misc_jdk11
   pool:
-    vmImage: 'ubuntu-16.04'
+    vmImage: 'ubuntu-latest'
   container: mdernst/cf-ubuntu-jdk11-plus:latest
   steps:
   - checkout: self
@@ -57,7 +57,7 @@ jobs:
     displayName: test-misc.sh
 - job: cf_inference_jdk8
   pool:
-    vmImage: 'ubuntu-16.04'
+    vmImage: 'ubuntu-latest'
   container: mdernst/cf-ubuntu-jdk8:latest
   steps:
   - checkout: self
@@ -66,7 +66,7 @@ jobs:
     displayName: test-cf-inference.sh
 - job: daikon_jdk8
   pool:
-    vmImage: 'ubuntu-16.04'
+    vmImage: 'ubuntu-latest'
   container: mdernst/cf-ubuntu-jdk8:latest
   steps:
   - checkout: self
@@ -75,7 +75,7 @@ jobs:
     displayName: test-daikon.sh
 #- job: daikon_jdk11
 #  pool:
-#    vmImage: 'ubuntu-16.04'
+#    vmImage: 'ubuntu-latest'
 #  container: mdernst/cf-ubuntu-jdk11:latest
 #  steps:
 #  - checkout: self
@@ -84,7 +84,7 @@ jobs:
 #    displayName: test-daikon.sh
 - job: guava_jdk8
   pool:
-    vmImage: 'ubuntu-16.04'
+    vmImage: 'ubuntu-latest'
   container: mdernst/cf-ubuntu-jdk8:latest
   timeoutInMinutes: 300
   steps:
@@ -94,7 +94,7 @@ jobs:
     displayName: test-guava.sh
 - job: guava_jdk11
   pool:
-    vmImage: 'ubuntu-16.04'
+    vmImage: 'ubuntu-latest'
   container: mdernst/cf-ubuntu-jdk11:latest
   timeoutInMinutes: 300
   steps:
@@ -104,7 +104,7 @@ jobs:
     displayName: test-guava.sh
 - job: plume_lib_jdk8
   pool:
-    vmImage: 'ubuntu-16.04'
+    vmImage: 'ubuntu-latest'
   container: mdernst/cf-ubuntu-jdk8:latest
   steps:
   - checkout: self
@@ -113,7 +113,7 @@ jobs:
     displayName: test-plume-lib.sh
 - job: plume_lib_jdk11
   pool:
-    vmImage: 'ubuntu-16.04'
+    vmImage: 'ubuntu-latest'
   container: mdernst/cf-ubuntu-jdk11:latest
   steps:
   - checkout: self
@@ -122,7 +122,7 @@ jobs:
     displayName: test-plume-lib.sh
 - job: downstream_jdk11
   pool:
-    vmImage: 'ubuntu-16.04'
+    vmImage: 'ubuntu-latest'
   container: mdernst/cf-ubuntu-jdk11:latest
   steps:
   - checkout: self
@@ -131,7 +131,7 @@ jobs:
     displayName: test-downstream.sh
 - job: downstream_jdk8
   pool:
-    vmImage: 'ubuntu-16.04'
+    vmImage: 'ubuntu-latest'
   container: mdernst/cf-ubuntu-jdk8:latest
   steps:
   - checkout: self
