--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -85,8 +85,8 @@ checkCompilerMessages {
 test {
     useJUnit {
         // These are run in task wholeProgramInferenceTests.
-        excludeCategories 'tests.WholeProgramInferenceJaifsTest'
-        excludeCategories 'tests.WholeProgramInferenceStubsTest'
+        excludeCategories 'tests.wpirunners.WholeProgramInferenceJaifsTest'
+        excludeCategories 'tests.wpirunners.WholeProgramInferenceStubsTest'
     }
 }
 
