--- a/docs/examples/MavenExampleJDK11/pom.xml
+++ b/docs/examples/MavenExampleJDK11/pom.xml
@@ -59,7 +59,7 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.1</version>
           <configuration>
-              <fork>true</fork>
+              <fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
               <release>11</release>
               <showWarnings>true</showWarnings>
               <verbose>true</verbose>
